2017.XX.XX Version 2.0.0
 * Fixed Exists() calls on Shares and Directories to now populate metadata. This was already being done for Files.
 * Fixed a bug that prevented setting content MD5 to true when creating a new file.
 * Fixed a bug where access conditions, options, and operation context were not being passed when calling openWriteExisting() on a page blob or a file.

2017.01.30 Version 1.0.0
 * Android Studio support via Gradle build system.
 * Updated tests from JUnit 3 to Android Junit 4.
 * Prefix support for listing files and directories.
 * Added support for setting public access when creating a blob container
 * The public access setting on a blob container is now a container property returned from downloadProperties.
 * Add Message now modifies the PopReceipt, Id, NextVisibleTime, InsertionTime, and ExpirationTime properties of its CloudQueueMessage parameter.
 * Populate content MD5 for range gets on Blobs and Files.
 * Added support in Page Blob for incremental copy.
 * getQualifiedUri() has been deprecated for Blobs. Please use getSnapshotQualifiedUri() instead. This new function will return the blob including the snapshot (if present) and no SAS token.
 * getQualifiedStorageUri() has been deprecated for Blobs. Please use getSnapshotQualifiedStorageUri() instead. This new function will return the blob including the snapshot (if present) and no SAS token.
 * Fixed a bug where copying from a blob that included a SAS token and a snapshot ommitted the SAS token.

2016.07.14 Version 0.8.0
 * Added support for server-side encryption.
 * Fixed a bug in the retry policies where 300 status codes were being retried when they shouldn't be.
 * Added support for getBlobReferenceFromServer methods on CloudBlobContainer to support retrieving a blob without knowing its type.
 * Added support for setting a library-wide proxy. The default proxy can be set on OperationContext.