@@ -60,7 +60,7 @@ public class CloudFileShareTests {
 
     @After
     public void fileShareTestMethodTearDown() throws StorageException {
-        this.share.deleteIfExists();
+        //this.share.deleteIfExists();
     }
     
     /**
@@ -491,7 +491,7 @@ public class CloudFileShareTests {
         assertTrue(this.share.deleteIfExists(null, null, ctx));
     }
 
-    //@Test
+    @Test
     public void testCreateShareSnapshot() throws StorageException, URISyntaxException, IOException {
         // create share with metadata
         this.share.create();
@@ -548,15 +548,15 @@ public class CloudFileShareTests {
 
         final UriQueryBuilder uriBuilder = new UriQueryBuilder();
         uriBuilder.add("sharesnapshot", snapshot.snapshotID);
-//        CloudFileShare snapshotRef5 = new CloudFileShare(uriBuilder.addToURI(this.share.getUri()),
-//                                                         this.share.getServiceClient().getCredentials(), null);
-//        assertEquals(snapshot.snapshotID, snapshotRef5.snapshotID);
-//        assertTrue(snapshotRef5.exists());
+        CloudFileShare snapshotRef5 = new CloudFileShare(uriBuilder.addToURI(this.share.getUri()),
+                                                         this.share.getServiceClient().getCredentials(), null);
+        assertEquals(snapshot.snapshotID, snapshotRef5.snapshotID);
+        assertTrue(snapshotRef5.exists());
 
         snapshot.delete();
     }
     
-    //@Test
+    @Test
     public void testDeleteShareSnapshotOptions() throws StorageException, URISyntaxException, IOException {
         // create share with metadata
         this.share.create();
@@ -580,7 +580,7 @@ public class CloudFileShareTests {
         assertFalse(snapshot.exists());
     }
 
-    //@Test
+    @Test
     public void testListFilesAndDirectoriesWithinShareSnapshot() throws StorageException, URISyntaxException {
         this.share.create();
 
@@ -621,7 +621,7 @@ public class CloudFileShareTests {
         snapshot.delete();
     }
 
-    //@Test
+    @Test
     public void testUnsupportedApisShareSnapshot() throws StorageException, URISyntaxException {
         CloudFileClient client = FileTestHelper.createCloudFileClient();
         this.share.create();
@@ -634,13 +634,13 @@ public class CloudFileShareTests {
         catch (IllegalArgumentException e) {
             assertEquals(SR.INVALID_OPERATION_FOR_A_SHARE_SNAPSHOT, e.getMessage());
         }
-//        try {
-//            new CloudFileShare(snapshot.getQualifiedUri(), client.getCredentials(), "2016-10-24T16:37:17.0000000Z");
-//            fail("Shouldn't get here");
-//        }
-//        catch (IllegalArgumentException e) {
-//            assertEquals(SR.SNAPSHOT_QUERY_OPTION_ALREADY_DEFINED, e.getMessage());
-//        }
+        try {
+            new CloudFileShare(snapshot.getQualifiedUri(), client.getCredentials(), "2016-10-24T16:37:17.0000000Z");
+            fail("Shouldn't get here");
+        }
+        catch (IllegalArgumentException e) {
+            assertEquals(SR.SNAPSHOT_QUERY_OPTION_ALREADY_DEFINED, e.getMessage());
+        }
         try {
             snapshot.downloadPermissions();
             fail("Shouldn't get here");
