@@ -121,7 +121,7 @@ public final class CloudFileClient extends ServiceClient {
      * @see <a href="http://msdn.microsoft.com/en-us/library/azure/dn167011.aspx">Naming and Referencing Shares,
      *      Directories, Files, and Metadata</a>
      */
-    protected CloudFileShare getShareReference(final String shareName, String snapshotID) throws URISyntaxException, StorageException {
+    public CloudFileShare getShareReference(final String shareName, String snapshotID) throws URISyntaxException, StorageException {
         Utility.assertNotNullOrEmpty("shareName", shareName);
         return new CloudFileShare(shareName, snapshotID, this);
     }
